// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup testClass1 testClass2 css-aw09zp-euiFacetGroup-m"
  data-test-subj="test subject string"
/>
`;

exports[`EuiFacetGroup props gutterSize l is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup css-d7pbui-euiFacetGroup-l"
/>
`;

exports[`EuiFacetGroup props gutterSize m is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup css-aw09zp-euiFacetGroup-m"
/>
`;

exports[`EuiFacetGroup props gutterSize none is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup css-6m0bl0-euiFacetGroup-none"
/>
`;

exports[`EuiFacetGroup props gutterSize s is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup css-ej7p9z-euiFacetGroup-s"
/>
`;

exports[`EuiFacetGroup props layout horizontal is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap euiFacetGroup css-1aqlgfc-euiFacetGroup-m"
/>
`;

exports[`EuiFacetGroup props layout vertical is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup css-aw09zp-euiFacetGroup-m"
/>
`;
